<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/signUpActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/SectionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="500dp"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:drawableEnd="@drawable/ic_man_icon" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_female_icon" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="270dp"
            android:layout_marginBottom="20dp"
            android:minHeight="48dp"
            android:prompt="@string/hint_Spinner_Country" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chbReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="590dp"
            android:text="@string/reading"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chbPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="590dp"
            android:text="@string/playing"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chbTraveling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="590dp"
            android:text="@string/traveling"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titFullName"
            style="@style/ForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_full_name"
            app:startIconDrawable="@drawable/ic_name_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tetFullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titPhoneNumber"
            style="@style/ForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_phone_number"
            app:startIconDrawable="@drawable/ic_call_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tetPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titEmailAddress"
            style="@style/ForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_email_address"
            app:startIconDrawable="@drawable/ic_mail_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tetEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titBirthDate"
            style="@style/ForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_date_of_birth"
            app:startIconDrawable="@drawable/ic_calendar_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tetBirthDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titAddress"
            style="@style/ForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="410dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_address"
            app:startIconDrawable="@drawable/ic_address_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tetAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHeaderRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="480dp"
            android:layout_marginBottom="20dp"
            android:text="@string/select_sex"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHeaderChb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="570dp"
            android:layout_marginBottom="20dp"
            android:text="@string/select_hobbies"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/tvSignUpSuccessfully"
           app:layout_constraintTop_toBottomOf="@id/SectionOne"
           app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnActivitySignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#BE2CBC6D"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:text="@string/signup" />

</androidx.constraintlayout.widget.ConstraintLayout>